--- a/config
+++ b/config
@@ -1,3 +1,4 @@
 ngx_addon_name=ngx_http_eval_module
 HTTP_AUX_FILTER_MODULES="$HTTP_AUX_FILTER_MODULES ngx_http_eval_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_eval_module.c"
+CFLAGS="$CFLAGS -DNDK_SET_VAR"
