now we no longer bundle Test::Nginx with us; and also fixed several important regressions and this module works again!

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ print.txt
 .rsync
 *.tar.gz
 dist
-build[78]
+build[789]
 build
 tags
 update-readme
@@ -33,3 +33,4 @@ src/module.c
 releng
 t
 *.html
+all.sh
