--- a/config
+++ b/config
@@ -1,6 +1,7 @@
 ngx_addon_name=ngx_http_eval_module
 HTTP_AUX_FILTER_MODULES="$HTTP_AUX_FILTER_MODULES ngx_http_eval_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_eval_module.c"
+NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h"
 CFLAGS="$CFLAGS -DNDK_SET_VAR"
 #have=NDK_REWRITE_PHASE  . auto/have
 
