--- a/config
+++ b/config
@@ -1,7 +1,9 @@
 ngx_addon_name=ngx_http_eval_module
-HTTP_AUX_FILTER_MODULES="$HTTP_AUX_FILTER_MODULES ngx_http_eval_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_eval_module.c"
-NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h"
-CFLAGS="$CFLAGS -DNDK_SET_VAR"
-#have=NDK_REWRITE_PHASE  . auto/have
 
+EVAL_SRCS="$ngx_addon_dir/src/ngx_http_eval_module.c"
+EVAL_DEPS="$ngx_addon_dir/src/ddebug.h"
+
+HTTP_AUX_FILTER_MODULES="$HTTP_AUX_FILTER_MODULES $ngx_addon_name"
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $EVAL_SRCS"
+NGX_ADDON_DEPS="$NGX_ADDON_DEPS $EVAL_DEPS"
+CFLAGS="$CFLAGS -DNDK_SET_VAR"
